--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="/assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/style" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: iPortfolio
