--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/me2.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="me2.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Rostyslav Zabolotskyy</a></h1>
         <div class="social-links mt-3 text-center">
         </div>
