--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/me2.jpg" class="img-fluid" alt="">
+            <img src="me2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Student</h3>
